<resources>
    <string name="app_name">Intelitrack</string>
    <string name="title_activity_login">Login</string>
    <string name="login_subtext">Forneça as credenciais de acesso para iniciar a utilização do sistema.</string>
    <string name="email_hint">Endereço de e-mail</string>
    <string name="password_hint">••••••</string>
    <string name="login">Login</string>
    <string name="forgot_password">Esqueci senha</string>
    <string name="create_account">Criar conta</string>
    <string name="navigation_drawer_open">Abrir barra de navegação</string>
    <string name="navigation_drawer_close">Fechar barra de navegação</string>
    <string name="title_activity_main">Map</string>
    <string name="TrackerImageDescription">Modelo do rastreador</string>
    <string name="title_activity_cards">Tracker</string>
    <string name="txtNoTracker">Nenhum rastreador</string>
    <string name="txtNoTrackerDescription">Você pode utilizar o botão abaixo para adicionar novos rastreadores na unidade.</string>
    <string name="btnAddTracker">Adicionar rastreador</string>
    <string name="txtError">Falha na consulta</string>
    <string name="txtErrorDescription">Não foi possível realizar a busca por rastreadores vinculados a esta conta.</string>
    <string name="btnRefresh">Tentar novamente</string>
    <string name="imgNoTracker">Nenhum rastreador localizado</string>
    <string name="imgLoading">Carregando&#8230;</string>
    <string name="txtLoading">Carregando informações&#8230;</string>
    <string name="app_description">Sistema de Rastreamento - DPF/NVI/MS</string>
    <string name="menu_trackers">Dispositivos rastreadores</string>
    <string name="menu_add">Adicionar rastreador</string>
    <string name="menu_refresh">Atualizar lista</string>
    <string name="menu_search">Pesquisar por nome</string>
    <string name="menu_notifications">Opções de notificação</string>
    <string name="menu_notification_sound">Som de notificação</string>
    <string name="menu_notification_vibrate">Opções de vibração</string>
    <string name="menu_notification_disable">Desativar notificações</string>
    <string name="menu_tracker_commands">Comandos do rastreador</string>
    <string name="menu_request_position">Solicitar localização atual</string>
    <string name="menu_request_status">Solicitar status do dispositivo</string>
    <string name="menu_reset">Reiniciar configurações</string>
    <string name="menu_tracker_config">Configurações do rastreador</string>
    <string name="menu_map_components">Componentes do mapa</string>
    <string name="menu_map_path">Caminho entre coordenadas</string>
    <string name="menu_map_radius">Raio de alcance de torres GSM</string>
    <string name="menu_my_location">Minha localização</string>
    <string name="menu_zoom_control">Controles de zoom</string>
    <string name="menu_search_hint">Nome, modelo ou número</string>
    <string name="menu_turn_off">Desligar temporariamente</string>
    <string name="menu_maps">Tipos de mapa</string>
    <string name="map_default">Mapa padrão</string>
    <string name="map_satellite">Satélite</string>
    <string name="map_terrain">Terreno</string>
    <string name="map_hybrid">Híbrido</string>
    <string name="menu_include">Incluir</string>
    <string name="menu_delete">Excluir</string>
    <string name="action_add">Adicionar</string>
    <string name="action_refresh">Atualizar</string>
    <string name="action_settings">Configurações</string>
    <string name="imgTracker">Modelo do rastreador</string>
    <string name="imgBatteryLevel">Nível da bateria</string>
    <string name="imgSignalLevel">Nível do sinal</string>
    <string name="imgMap">Imagem do mapa</string>
    <string name="lblTrackerConfig">Configurações do rastreador</string>
    <string name="title_add_tracker">Adicionar rastreador</string>
    <string name="selected_model">Modelo selecionado: %1$s</string>
    <string name="lblTrackerPhone">Informe o nº de telefone inserido no rastreador</string>
    <string name="txtTrackerPhoneHint">Ex: 6799998888</string>
    <string-array name="mobile_networks">
        <item>VIVO</item>
        <item>TIM</item>
        <item>OI</item>
        <item>CLARO</item>
        <item>VODAFONE</item>
        <item>VIVO M2M</item>
    </string-array>
    <string name="lblIMEI">Informe o IMEI do dispositivo rastreador</string>
    <string name="txtIMEIHint">Ex: 355160071705274 (opcional)</string>
    <string name="lblIMEIInfo">Obs.: O IMEI representa um código de identificação único, geralmente encontrado em uma etiqueta colada no próprio dispositivo rastreador. </string>
    <string name="lblSpotID">Informe o código do dispositivo (Feed ID):</string>
    <string name="txtSpotIDHint">0I48pmHmVsrh88oe38f0etUjB8pJglLOp</string>
    <string name="lblSpotInfo">Obs.: O código Feed ID pode ser obtido na página de compartilhamento do site SPOT, após realização de login. </string>
    <string-array name="active_options">
        <item>Sempre (ver configuração <b>FIX</b>)</item>
    </string-array>
    <string-array name="standby_options">
        <item>Ao detectar movimento</item>
        <item>A cada 15 minutos</item>
        <item>A cada 30 minutos</item>
        <item>A cada 1 hora</item>
        <item>A cada 3 horas</item>
    </string-array>
    <string-array name="hibernate_options">
        <item>Ao detectar movimento</item>
        <item>A cada 1 hora</item>
        <item>A cada 3 horas</item>
        <item>A cada 6 horas</item>
        <item>A cada 12 horas</item>
        <item>A cada 24 horas</item>
    </string-array>
    <string-array name="configFIX_values">
        <item>030s</item>
        <item>060s</item>
        <item>005m</item>
        <item>015m</item>
        <item>001h</item>
    </string-array>
    <string name="title_activity_settings">Novo rastreador</string>
    <string name="lblBasicConfig">Configurações básicas</string>
    <string name="lblTrackerName">Nome de identificação:</string>
    <string name="txtTrackerDescriptionHint">(opcional)</string>
    <string name="lblTrackerDescription">Descrição do rastreador:</string>
    <string name="lblModel">Modelo</string>
    <string name="model_tk102">Powerpack TK102</string>
    <string name="model_tk103">Coban TK102B</string>
    <string name="model_tk306">Coban TK306</string>
    <string name="model_st940">Suntech ST940</string>
    <string name="model_spot">Spot TRACE</string>
    <string name="model_pt39">TechGPS PT39</string>
    <string name="model_pt50x">TechGPS PT50X</string>
    <string name="lblTrackerIdentification">Informações do rastreador</string>
    <string name="lblPassword">Senha de configuração:</string>
    <string name="lblNetwork">Operadora telefônica:</string>
    <string name="lblDefaultNetwork">Padrão: VIVO</string>
    <string name="lblPhoneNumber">Número de telefone:</string>
    <string name="txtPhoneNumberHint">Ex.: 6799998888</string>
    <string name="lblFeedID">Identificador (Feed ID):</string>
    <string name="txtFeedIDHint">Ex.: 0I48pmHmVsrh88oe38f0etUjB8pJglLOp</string>
    <string name="lblTKSubtitle">Necessário informar o número da linha telefônica ou o número IMEI do dispositivo rastreador. Caso o IMEI não seja preenchido, o servidor tentará realizar contato com o rastreador para obter esta informação.</string>
    <string name="lblSpotSubtitle">Os campos acima devem ser preenchidos com o valor do FEED ID e da senha utilizados na página de compartilhamento da SPOT.</string>
    <string name="lblSuntechSubtitle">Necessário informar o número IMEI do dispositivo rastreador. O IMEI informado deve conter 15 dígitos e geralmente está disponível na parte de trás do rastreador.</string>
    <string name="lblTechGPSSubtitle">Informe o número IMEI do dispositivo rastreador. O IMEI informado deve conter 15 dígitos e geralmente está disponível em uma etiqueta colada no rastreador.</string>
    <string name="lblColorIdentification">Cor de identificação</string>
    <string name="lblColorDescription">Selecione uma cor para facilitar a identificação a visualização do rastreador no mapa.</string>
    <string name="lblObtainingIMEI">Solicitando IMEI do rastreador</string>
    <string name="lblConnecting">Conectando ao servidor Intelitrack&#8230;</string>
    <string name="lblAuth">"Autenticando com o servidor Intelitrack&#8230;</string>
    <string name="lblSending">Enviando mensagem ao rastreador&#8230;</string>
    <string name="lblWaitingDelivery">Aguardando confirmação de entrega&#8230;</string>
    <string name="lblWaitingResponse">Esperando resposta do rastreador&#8230;</string>
    <string name="lblLoading">Teste finalizado, carregando configurações&#8230;</string>
    <string name="btnTryAgain">Testar novamente</string>
    <string name="title_activity_detail">Detalhes</string>
    <string name="transition_drawable">BackgroundTransition</string>
    <string name="transition_icon">IconTransition</string>
    <string name="transition_title">TitleTransition</string>
    <string name="transition_subtitle">SubTitleTransition</string>
    <string name="transition_config_description">ConfigDescTransition</string>
    <string name="transition_config_status">ConfigStatusTransition</string>
    <string name="transition_config_image">ConfigImageTransition</string>
    <string name="action_hide">Ocultar Painel</string>
    <string name="action_show">Exibir Painel</string>
    <string name="action_filter">Filtar resultados</string>
    <string name="action_edit">Editar rastreador</string>
    <string name="action_request_position">Solicitar posição atual</string>
    <string name="imgInfo">Informações sobre a localização.</string>
    <string name="txtWaitingTitle">Aguardando dados do rastreador&#8230;</string>
    <string name="txtWaitingSubtitle">Nenhuma resposta do rastreador foi recebida até o momento. Certifique-se que o mesmo esteja ligado e com sinal da rede de celular.</string>
    <string name="txtFilterResult">Nenhuma coordenada disponível</string>
    <string name="txtFilterResultSubtitle">Não foram encontradas coordenadas com os filtros selecionados. Altere as opções de filtros para exibir mais resultados.</string>
    <string name="txtInterval">Intervalo de atualização</string>
    <string name="txtInfoBattery">Bateria:</string>
    <string name="txtInfoSignal">Sinal:</string>
    <string name="txtModel"><b>Modelo: %s</b></string>
    <string name="txtFilterTitle">Opções de exibição</string>
    <string name="lblItemCount">Quantidade de itens</string>
    <string name="swShowPolyline">Exibir linha entre as coordenadas</string>
    <string name="swShowCircle">Exibir raio de cobertura GSM</string>
    <string name="txtCoordinatesNumber">Exibir até %1$d coordenadas simultaneamente.</string>
    <string name="lblItemCountDescription">Escolha quantas coordenadas serão exibidas simultaneamente. Um valor elevado pode dificultar a visualização do mapa.</string>
    <string name="lblShowPolylineDesc">Exibe uma linha tracejada no mapa para demonstrar a sequência entre as coordenadas disponíveis.</string>
    <string name="lblShowCircleDesc">Exibe um círculo no mapa representando o raio de cobertura da antena GSM mais próxima do rastreador (quando não há sinal GPS).</string>
    <string name="txtDatetimeTitle">Intervalo de datas</string>
    <string name="lblInitialDate">Data inicial</string>
    <string name="lblEndingDate">Data final</string>
    <string name="btnNext">Próxima</string>
    <string name="imgDatetime">Data/hora</string>
    <string name="imgEdit">Opções</string>
    <string name="imgExpand">Expandir</string>
    <string name="lblNoLocation">Localização até o momento indisponível</string>
    <string name="lblNotAvailable">Não informado até o momento</string>
    <string name="lblBatteryLevel">Nível de bateria</string>
    <string name="lblSignalLevel">Nível de sinal GSM</string>
    <string name="btnShare">Compartilhar</string>
    <string name="btnConfigure">Configurar</string>
</resources>