<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    tools:context="br.gov.dpf.intelitrack.LoginActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="45sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/login_subtext"
            android:textAlignment="center"
            android:textColor="#FFF" />


        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textColorHint="#fff" />


        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="18sp"
            android:background="@drawable/rounded_button"
            app:spinning_bar_width="2dp"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="5dp" />


        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColor="#fff" />

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="#FFF"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/txtCreateAccount"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="#fff" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
